tests/baselines/reference/nodeModulesTripleSlashReferenceModeOverride1(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
/index.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/index.ts(2,1): error TS2304: Cannot find name 'foo'.
/index.ts(3,1): error TS2304: Cannot find name 'bar'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== /index.ts (3 errors) ====
    /// <reference types="pkg" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    foo;
    ~~~
!!! error TS2304: Cannot find name 'foo'.
    bar; // bar should resolve while foo should not, since index.js is cjs
    ~~~
!!! error TS2304: Cannot find name 'bar'.
    export {};
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        var foo: number;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        var bar: number;
    }